fixed: lectura img png

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
 <body>
   <header class="header">
      <div class="caja-logo">
-       <img src="/img/logo2.png" alt=""class= "logo">
+       <img src="./img/logo2.png" alt=""class= "logo">
     </div>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -34,7 +34,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <div class="container-main">
       <h1 class="h1">Bienvenidxs a mi site</h1>
       <div class="img">
-        <img src="/img/mayor-menor.png" alt="" class="img-bienvendida">
+        <img src="./img/mayor-menor.png" alt="" class="img-bienvendida">
       </div>
     </div>
   </main>
@@ -43,7 +43,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
         <h3 class="titulo-presentacion">Soy Mariana</h3>
         <p class="texto-presentacion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut laborum distinctio voluptates quisquam odio quam cumque fugit sint</p>
         <div class="contenedor-img-check">
-          <img src="/img/trabajando.png" alt="" class="img-check">
+          <img src="./img/trabajando.png" alt="" class="img-check">
         </div>      
     </div>
   </section>
@@ -52,7 +52,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
         <h3 class="mis-servicios">Mis Servicios</h3>
         <div class="subcontenedor">
           <div class="caja-sec2">
-            <img src="/img/html-css.png" alt="" class="img-hago-cosas">
+            <img src="./img/html-css.png" alt="" class="img-hago-cosas">
           </div>
           <h6 class="hago-cosas">Hago Cosas</h6>
           <p class="hago-cosas-p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In dicta magnam provident non corporis culpa perferendis officia. Laborum voluptatem eum simili</p>
@@ -60,7 +60,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
         
         <div class="subcontenedor">
           <div class="caja-sec2">
-            <img src="/img/html-css.png" alt="" class="img-hago-cosas">
+            <img src="./img/html-css.png" alt="" class="img-hago-cosas">
           </div>
           <h6 class="hago-cosas">Hago Cosas</h6>
           <p class="hago-cosas-p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In dicta magnam provident non corporis culpa perferendis officia. Laborum voluptatem eum simili</p>
@@ -68,7 +68,7 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
         
         <div class="subcontenedor">
           <div class="caja-sec2">
-            <img src="/img/html-css.png" alt="" class="img-hago-cosas">
+            <img src="./img/html-css.png" alt="" class="img-hago-cosas">
           </div>
           <h6 class="hago-cosas">Hago Cosas</h6>
           <p class="hago-cosas-p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In dicta magnam provident non corporis culpa perferendis officia. Laborum voluptatem eum simili</p>
@@ -98,12 +98,12 @@ family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
   <footer class="footer">
     <div class="container-footer">
       <div class="logo-footer-section">
-        <img class= "logo-footer" src="/img/logo2.png" alt="">
+        <img class= "logo-footer" src="./img/logo2.png" alt="">
       </div>
       <div class="social">
-        <a href="#"><img class="img-social" src="img/linkedin.png" alt="linkedin">Linkedin</a>
-        <a href="#"><img class="img-social" src="img/email.png" alt="email">Email</a>
-        <a href="#"><img class="img-social" src="img/github.png" alt="github">Github</a>
+        <a href="#"><img class="img-social" src="./img/linkedin.png" alt="linkedin">Linkedin</a>
+        <a href="#"><img class="img-social" src="./img/email.png" alt="email">Email</a>
+        <a href="#"><img class="img-social" src="./img/github.png" alt="github">Github</a>
       </div>
     </div>
   </footer>
